# scv

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.claude/skills/commit/: SKILL.md
.claude/skills/lint/: SKILL.md
.codex/skills/commit/: SKILL.md
.codex/skills/commit/agents/: openai.yaml
.codex/skills/commit/scripts/: check-commit-header.sh
.codex/skills/lint/: SKILL.md
.codex/skills/lint/agents/: openai.yaml
config/: config.example.toml
crates/scv-cli/: Cargo.toml
crates/scv-cli/src/: main.rs  project_context.rs  session_store.rs  workspace.rs
crates/scv-cli/tests/: agent_loop_live.rs
crates/scv-config/: Cargo.toml
crates/scv-config/src/: lib.rs
crates/scv-core/: Cargo.toml
crates/scv-core/src/: agent.rs  context.rs  error.rs  lib.rs  message.rs  provider.rs  session.rs  skill.rs  system_prompt.rs  tool.rs
crates/scv-core/tests/: e2e_agent_loop.rs
crates/scv-providers/: Cargo.toml
crates/scv-providers/src/: anthropic.rs  lib.rs  openai.rs
crates/scv-providers/tests/: aiproxy_live.rs  ollama_live.rs  openai_http.rs
crates/scv-skills/: Cargo.toml
crates/scv-skills/src/: lib.rs
crates/scv-skills/src/builtin/: compact.md
crates/scv-tools/: Cargo.toml
crates/scv-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  path.rs  read.rs  transcript_search.rs  web_fetch.rs  write.rs
crates/scv-tools/tests/: tools.rs
crates/scv-tui/: Cargo.toml
crates/scv-tui/src/: app.rs  lib.rs  observer.rs  permission.rs  phase.rs
docs/: ARCHITECTURE.md  CODING_RULES.md  DEVELOPMENT.md  ROADMAP.md  SETUP.md
docs/experiments/: onboarding-2-evidence.md
docs/experiments/raw/: 1h_A_beta.json  1h_A_body.json  1h_B_body.json  1h_B_nobeta.json  cache_body.json  cache_body_1tok.json  cache_break.sh  cache_break_1tok.json  cache_resp_1.json  cache_resp_2.json  compact_body.json  compact_clear_combo_both_betas.json  compact_clear_combo_cmbeta_400.json  compact_clear_combo_compactbeta.json  compact_off.json  compact_on.json  compact_wrongbeta.json  ctxmgmt.json  ctxmgmt_beta_off.json  ctxmgmt_beta_on.json  ctxmgmt_req.json  ping.json  replay.sh  task1_scv_e2e.txt  ttl_1_write.json  ttl_2_afterexpiry.json  ttl_body.json  ttl_test.sh  webfetch_body.json  webfetch_body_20260318.json  webfetch_resp.json  webfetch_resp_20260318.json  websearch_body.json  websearch_body_20260318.json  websearch_resp.json  websearch_resp_20260318.json  wf_nobeta.json
scripts/: coverage.sh  scv-link.sh
skills/commit/: SKILL.md
skills/review/: SKILL.md
