[package]
name = "scv-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
scv-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
tracing.workspace = true
reqwest.workspace = true # web_fetch 도구(HTTP GET)
