[package]
name = "scv-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
scv-core.workspace = true
async-trait.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
tracing.workspace = true
